--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,4 @@ package = "@netlify/plugin-nextjs"
 [build.environment]
 NODE_VERSION = "20"
 NEXT_TELEMETRY_DISABLED = "1"
+NPM_FLAGS = "--production=false"
